--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 <body >
     <main id="content">
         <nav>
-            <div></div>
-            <div></div>
+            <div>
+                <a href="#"><img src="img/wildbeast.svg" alt=""></a>
+                </div>
+            <div id="icone">
+                <div><a href="#">sobre</a></div>
+                <div><a href="#">animais</a></div>
+                <div><a href="#">contato</a></div>
+            </div>
         </nav>
         <aside id="aside1">Aside 1</aside>
         <section>section</section>
