--- a/index.html
+++ b/index.html
@@ -19,9 +19,43 @@
                 <div><a href="#">contato</a></div>
             </div>
         </nav>
-        <aside id="aside1">Aside 1</aside>
-        <section>section</section>
-        <aside id="aseid2">Aside 2</aside>
+        <aside id="aside1">
+            <div> <img src="img/cervo.svg" alt=""></div>
+            <div> <img src="img/leao.svg" alt=""></div>
+            <div> <img src="img/gato.svg" alt=""></div>
+            <div> <img src="img/vaca.svg" alt=""></div>
+            <div> <img src="img/ovelha.svg" alt=""></div>
+            <div><img src="img/abelha.svg" alt=""></div>
+        </aside>
+        <section>
+            <div id="sec01">
+                <h1>Lobo Cinza</h1>
+                <p>da família canis lupus</p>
+            </div>
+            <div id="sec02">
+                <div class="sec02div">
+                    <div>
+                        <div>72</div>
+                        <div>kg</div>
+                    </div>
+                </div>
+                <div class="sec02div">
+                    <div>
+                        <div>13</div>
+                        <div>age</div>
+                    </div>
+                    
+                </div>
+            </div>
+            <div id="sec03">sec03</div>
+            <div id="sec04">sec04</div>
+            <div id="sec05">sec05</div>
+            <div id="sec06">sec05</div>
+            <div id="sec07">sec07</div>
+            <div id="sec08">sec08</div>
+            <div id="sec09">sec09</div>
+        </section>
+        <aside id="aside2">Aside 2 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos, odit quos iure cumque delectus ea optio! Voluptates perspiciatis quae amet earum quasi excepturi culpa nesciunt repudiandae exercitationem facere. Beatae, consequuntur?</aside>
         <footer>Footer</footer>
     </main>
     
