--- a/index.html
+++ b/index.html
@@ -35,23 +35,44 @@
             <div id="sec02">
                 <div class="sec02div">
                     <div>
-                        <div>72</div>
-                        <div>kg</div>
+                        <div class="sec02div1">72</div>
+                        <div class="sec02div2">kg</div>
                     </div>
                 </div>
                 <div class="sec02div">
                     <div>
-                        <div>13</div>
-                        <div>age</div>
+                        <div class="sec02div1">13</div>
+                        <div class="sec02div2">age</div>
                     </div>
                     
                 </div>
             </div>
-            <div id="sec03">sec03</div>
-            <div id="sec04">sec04</div>
-            <div id="sec05">sec05</div>
-            <div id="sec06">sec05</div>
-            <div id="sec07">sec07</div>
+            <div id="sec03">
+                <p>É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico</p>
+                </div>
+            <div id="sec04">
+                <img src="img/wolf1.jpg" alt="">
+                <p>O peso e tamanho dos lobos variam muito em todo o mundo, tendendo a aumentar proporcionalmente com a latitude, como previsto pela teoria de Christian Bergmann. Em geral, a altura, medida a partir dos ombros, varia de 60 a 95 centímetros</p>
+            </div>
+            <div id="sec05">
+                <div id="sec05pm"><span >É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos.</span></div>
+                <img src="img/wolf2.jpg" alt="">
+                <p>O peso varia geograficamente. Em média, os lobos europeus pesam 38,5 kg; os lobos da América do Norte, 36 kg; os lobos indianos e árabes, 25 kg.[7] Embora raros, lobos com mais de 77 kg foram encontrados no Alasca, Canadá,[8] e na antiga União Soviética.</p>
+            </div>
+            <div id="sec06">
+                <span>“Há algo no uivar do lobo que tira um homem do aqui e agora e o transporta para uma floresta da mente.”
+                </span>
+            </div>
+            <div id="sec07">
+                <ul>
+                    <li>Surgiu: 12.000 anos</li>
+                    <li>Tipo: Mamífero</li>
+                    <li>Idade Média: 13 anos</li>
+                    <li>Macho adulto: 80kg</li>
+                    <li>Fêmea adulta: 55kg</li>
+                    <li>Família: Lupus</li>
+                </ul>
+            </div>
             <div id="sec08">sec08</div>
             <div id="sec09">sec09</div>
         </section>
