--- a/index.html
+++ b/index.html
@@ -73,11 +73,25 @@
                     <li>Família: Lupus</li>
                 </ul>
             </div>
-            <div id="sec08">sec08</div>
-            <div id="sec09">sec09</div>
+            <div id="sec08"><span>
+                É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico.
+            </span>
+            <span>
+                É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico.
+
+            </span>
+        </div>
+            <div id="sec09">
+                <img src="img/wolf3.jpg" alt="">
+            </div>
         </section>
-        <aside id="aside2">Aside 2 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos, odit quos iure cumque delectus ea optio! Voluptates perspiciatis quae amet earum quasi excepturi culpa nesciunt repudiandae exercitationem facere. Beatae, consequuntur?</aside>
-        <footer>Footer</footer>
+        <aside id="aside2">
+            <img src="img/anuncio-1.jpg" alt="">
+            <img src="img/anuncio-2.jpg" alt="">
+        </aside>
+        <footer>
+            <p>Origamid © 2012 - 2017. Alguns direitos reservados.</p>
+        </footer>
     </main>
     
 </body>
